[project]
name = "agent"
version = "0.0.1"
description = "一个agent"
authors = [
{name = "wqh",email = "2413307855@qq.com"}
]
readme = "README.md"
license = {text = "MTT"}
requires-python = ">=3.10"
dependencies = [
"langgraph>=1.0.0",
"python-dotenv>=1.0.1"
]
[project.optional-dependencies]
dev = ["mypy>=1.11.1","ruff>=0.6.1"]
[build-system]
requires = ["setuptools>=73.0.0","wheel"]
build-backend = "setuptools.build_meta"
#[tool.setuptools]
#packages = ["langgraph.templates.agent","agent","tool"]
#[tool.setuptools.package-dir]
#"langgraph.templates.agent" = "src/agent"
#"agent" = "src/agent"
#"tool" = "src/tool"
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]